force-app/main/default/objects/zkmulti__Pickup_Custom_Address_Source__c/zkmulti__Pickup_Custom_Address_Source__c.object-meta.xml
<CustomObject>
    <label>Pickup Custom Address Source</label>
    <nameField>
        <label>Pickup Custom Address Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pickup Custom Address Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>