force-app/main/default/objects/zkmulti__Pickup_Custom_Address_Source__c/fields/zkmulti__Auto_Create_Pickup__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Auto_Create_Pickup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Create Pickup</label>
    <type>Checkbox</type>
</CustomField>