force-app/main/default/objects/zkmulti__Pickup_Custom_Address_Source__c/fields/zkmulti__Ready_Time_Field__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Ready_Time_Field__c</fullName>
    <label>Ready Time Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>