force-app/main/default/objects/zkmulti__Pickup_Custom_Address_Source__c/fields/zkmulti__Shipment_Object_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Shipment_Object_Lookup_Field__c</fullName>
    <label>Shipment Object Lookup Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>